--- a/licenta-1/pom.xml
+++ b/licenta-1/pom.xml
@@ -50,6 +50,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
    		 	<groupId>org.hibernate</groupId>
     		<artifactId>hibernate-core</artifactId>
    		</dependency>
@@ -62,6 +66,11 @@
     		<groupId>com.pi4j</groupId>
     		<artifactId>pi4j-core</artifactId>
    			<version>1.2</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.rxtx</groupId>
+    		<artifactId>rxtx</artifactId>
+    		<version>2.1.7</version>
 		</dependency>
 	</dependencies>
 
