--- a/licenta-1/pom.xml
+++ b/licenta-1/pom.xml
@@ -45,6 +45,10 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
@@ -68,9 +72,8 @@
    			<version>1.2</version>
 		</dependency>
 		<dependency>
-    		<groupId>org.rxtx</groupId>
-    		<artifactId>rxtx</artifactId>
-    		<version>2.1.7</version>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -101,6 +104,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
