--- a/licenta-1/src/main/resources/application.properties
+++ b/licenta-1/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.url=jdbc:mysql://localhost:3306/licenta
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.url=jdbc:mysql://192.168.100.11:3306/db_example
 #spring.datasource.username=root
-#spring.datasource.password=Thales$1996
+#spring.datasource.password=admin
